[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/world/WaveTransition.png" type="Texture" id=1]
[ext_resource path="res://assets/world/Stars.png" type="Texture" id=2]
[ext_resource path="res://src/objects/UnitEgg.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/objects/HoneyBeeGuide.tres" type="Resource" id=4]
[ext_resource path="res://src/Shop.gd" type="Script" id=5]
[ext_resource path="res://assets/world/WorldTiles.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/EnergyBar/energy0.tres" type="Texture" id=7]
[ext_resource path="res://assets/ui/EnergyLevel/Level2.tres" type="Texture" id=8]
[ext_resource path="res://assets/UITheme.tres" type="Theme" id=10]
[ext_resource path="res://src/ui/EnergyTexture.gd" type="Script" id=11]

[sub_resource type="TileSet" id=27]
1/name = "Ground_1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Dark"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Wall"
3/texture = ExtResource( 6 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 48, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Ground_2"
4/texture = ExtResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Light"
5/texture = ExtResource( 6 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 64, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "TopTile_1"
6/texture = ExtResource( 6 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 80, 0, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Left_Tile_1"
7/texture = ExtResource( 6 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 112, 0, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "CornerTile_1"
8/texture = ExtResource( 6 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 96, 0, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "BottomTile_1"
9/texture = ExtResource( 6 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 128, 0, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "WorldTiles.png 10"
10/texture = ExtResource( 6 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 144, 0, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "WorldTiles.png 11"
11/texture = ExtResource( 6 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 160, 0, 16, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "WorldTiles.png 12"
12/texture = ExtResource( 6 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 176, 0, 16, 16 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "WorldTiles.png 13"
13/texture = ExtResource( 6 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 192, 0, 16, 16 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "WorldTiles.png 14"
14/texture = ExtResource( 6 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 208, 0, 16, 16 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "Stars.png 15"
15/texture = ExtResource( 2 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 0, 0, 16, 16 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "Stars.png 16"
16/texture = ExtResource( 2 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 16, 0, 16, 16 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "WaveTransition.png 17"
17/texture = ExtResource( 1 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 0, 0, 16, 16 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "WaveTransition.png 18"
18/texture = ExtResource( 1 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 16, 0, 16, 16 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0
19/name = "WaveTransition.png 19"
19/texture = ExtResource( 1 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 32, 0, 16, 16 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape_one_way = false
19/shape_one_way_margin = 0.0
19/shapes = [  ]
19/z_index = 0
20/name = "WaveTransition.png 20"
20/texture = ExtResource( 1 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 48, 0, 16, 16 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape_one_way = false
20/shape_one_way_margin = 0.0
20/shapes = [  ]
20/z_index = 0

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=34]
resource_name = "BoughtTier"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 3 ), Vector2( 20, 0.375 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -14 ), Vector2( 0, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.203922, 1, 0.309804, 1 ) ]
}

[sub_resource type="Animation" id=35]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -41 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20, 0.375 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "BoughtTier"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 3 ), Vector2( 20, 0.375 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -62 ), Vector2( 0, -41 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.203922, 1, 0.309804, 1 ) ]
}

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -41 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20, 0.375 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Shop" type="Node2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 5 )
unitGuides = [ ExtResource( 4 ), null, null, null, null ]
tier2Cost = 2
tier3Cost = 3
refreshCost = 2

[node name="Background" type="Node2D" parent="."]
position = Vector2( 8, 122 )
scale = Vector2( 8, 8 )

[node name="TileMap" type="TileMap" parent="Background"]
modulate = Color( 1, 1, 1, 0.705882 )
tile_set = SubResource( 27 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -589824, 15, 0, -458760, 15, 0, -458755, 15, 0, -524282, 16, 0, -393223, 15, 0, -393217, 16, 0, -393214, 15, 0, -393209, 16, 0, -262154, 16, 0, -262148, 15, 0, -327671, 15, 0, -196616, 16, 0, -262141, 16, 0, -262133, 16, 0, -196608, 15, 0, -65541, 15, 0, -131066, 16, 0, -9, 16, 0, -7, 15, 0, -65534, 15, 0, 9, 15, 0, 131061, 15, 0, 131066, 16, 0, 196603, 15, 0, 131074, 16, 0, 131078, 15, 0, 262136, 16, 0, 262143, 15, 0, 196612, 16, 0, 327677, 15, 0, 262151, 16, 0, 393207, 15, 0 )

[node name="Units" type="Node2D" parent="."]
position = Vector2( 0, 110 )

[node name="Tier1" type="Node2D" parent="Units"]
position = Vector2( 0, -112 )
scale = Vector2( 4, 4 )

[node name="UnitEgg" parent="Units/Tier1" instance=ExtResource( 3 )]
position = Vector2( -180, 0 )

[node name="UnitEgg2" parent="Units/Tier1" instance=ExtResource( 3 )]

[node name="UnitEgg3" parent="Units/Tier1" instance=ExtResource( 3 )]
position = Vector2( 180, 0 )

[node name="Tier2" type="Node2D" parent="Units"]
visible = false
scale = Vector2( 4, 4 )

[node name="UnitEgg" parent="Units/Tier2" instance=ExtResource( 3 )]
position = Vector2( -180, 0 )

[node name="UnitEgg2" parent="Units/Tier2" instance=ExtResource( 3 )]
position = Vector2( 0, 0 )

[node name="UnitEgg3" parent="Units/Tier2" instance=ExtResource( 3 )]
position = Vector2( 180, 0 )

[node name="Tier3" type="Node2D" parent="Units"]
visible = false
position = Vector2( 0, -438 )
scale = Vector2( 4, 4 )

[node name="UnitEgg" parent="Units/Tier3" instance=ExtResource( 3 )]
position = Vector2( -180, 0 )

[node name="UnitEgg2" parent="Units/Tier3" instance=ExtResource( 3 )]
position = Vector2( 0, 0 )

[node name="UnitEgg3" parent="Units/Tier3" instance=ExtResource( 3 )]
position = Vector2( 180, -1.5 )

[node name="Tiers" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 200 )
scale = Vector2( 8, 8 )

[node name="Tier1" type="Node2D" parent="Tiers"]
visible = false
position = Vector2( 0, 2.5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Tiers/Tier1"]
visible = false
position = Vector2( 0, -14 )
scale = Vector2( 20, 3 )
frames = SubResource( 30 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Tiers/Tier1/AnimatedSprite"]
reset_on_save = false
anims/BoughtTier = SubResource( 34 )
anims/RESET = SubResource( 35 )

[node name="Tier2" type="Node2D" parent="Tiers"]
visible = false
position = Vector2( 0, 2.5 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Tiers/Tier2"]
visible = false
position = Vector2( 0, -62 )
scale = Vector2( 20, 3 )
frames = SubResource( 30 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tiers/Tier2/AnimatedSprite2"]
reset_on_save = false
anims/BoughtTier = SubResource( 32 )
anims/RESET = SubResource( 33 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UI"]
anchor_right = 1.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyTexture" type="TextureRect" parent="CanvasLayer/UI/CenterContainer"]
margin_left = 370.0
margin_right = 910.0
margin_bottom = 96.0
rect_min_size = Vector2( 540, 96 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tier2" type="Button" parent="CanvasLayer/UI"]
visible = false
margin_left = 544.0
margin_top = 416.0
margin_right = 744.0
margin_bottom = 456.0
theme = ExtResource( 10 )
text = "Buy Tier"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tier2Cost" type="TextureRect" parent="CanvasLayer/UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 576.0
margin_top = 336.0
margin_right = -561.0
margin_bottom = -304.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tier3" type="Button" parent="CanvasLayer/UI"]
visible = false
margin_left = 544.0
margin_top = 256.0
margin_right = 744.0
margin_bottom = 296.0
theme = ExtResource( 10 )
text = "Buy Tier"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/UI"]
margin_right = 232.0
margin_bottom = 40.0
text = "Return To Base"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -315.0
margin_bottom = 65.0
text = "Left Click: Buy
Right Click: Lock / Unlock"
align = 1
valign = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
mouse_filter = 2
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/UI/MarginContainer"]
margin_right = 1280.0
margin_bottom = 100.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefreshButton" type="Button" parent="CanvasLayer/UI/MarginContainer/CenterContainer2"]
margin_left = 560.0
margin_top = 20.0
margin_right = 720.0
margin_bottom = 80.0
rect_min_size = Vector2( 160, 60 )
text = "Refresh"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI/MarginContainer/CenterContainer2"]
margin_left = 564.0
margin_top = 18.0
margin_right = 716.0
margin_bottom = 82.0
mouse_filter = 2
custom_constants/margin_left = 120
custom_constants/margin_bottom = 32

[node name="refreshCostImage" type="TextureRect" parent="CanvasLayer/UI/MarginContainer/CenterContainer2/MarginContainer"]
margin_left = 120.0
margin_right = 152.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="CanvasLayer/UI/Tier2" to="." method="_on_Tier2_button_up"]
[connection signal="button_up" from="CanvasLayer/UI/Tier3" to="." method="_on_Tier3_button_up"]
[connection signal="button_up" from="CanvasLayer/UI/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="CanvasLayer/UI/MarginContainer/CenterContainer2/RefreshButton" to="." method="_on_RefreshButton_button_up"]
